# SnotBot-Software

./: README.md
arl-scope-master/quadcopter_brain/src/quadcopter_brain/: current_mission.py
mission_runner/quadcopter_brain/src/quadcopter_brain/: current_mission.py  quadcopter.py
roscopter/launch/: roscopter.launch
roscopter/mavlink/pymavlink/dialects/v10/: ASLUAV.py  python_array_test.py
roscopter/scripts/: driver.py
snotbot_qr/: CMakeLists.txt  README.md  package.xml
snotbot_qr/launch/: vision.launch
snotbot_qr/msg/: qr_data.msg
snotbot_qr/scripts/: gps_tools.py  gps_tools_tester.py  qr_listener.py
snotbot_qr/src/: video.cpp
